test/fail/void_in_expr.zn
# ERRORS: 1
# Using void function in expression context

extern {
    func zn_test_void_func(x: int)
}

func main() {
    var x = zn_test_void_func(42)
    0
}
